After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734766 - The program crashes quite often when you try viewing an image's properties
The program crashes quite often when you try viewing an image's properties
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.13.x
Other Linux
: Normal major
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-08-14 06:35 UTC by Chris Fahlman
Modified: 2015-10-30 10:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cut n paste gdb log. (37.22 KB, text/plain)
2014-08-14 06:35 UTC, Chris Fahlman
  Details
properties-dialog: Print a warning for unknown nmm:flash values (1.12 KB, patch)
2014-12-16 12:55 UTC, Debarshi Ray
committed Details | Review
properties-dialog: Be more forgiving of unknown nmm:flash values (1.35 KB, patch)
2015-10-30 10:46 UTC, Debarshi Ray
committed Details | Review

Description Chris Fahlman 2014-08-14 06:35:01 UTC
Created attachment 283349 [details]
cut n paste gdb log.

It doesn't always crash, but quite often, when trying to view a photo's properties.
Comment 1 Debarshi Ray 2014-12-16 12:55:59 UTC
Created attachment 292828 [details] [review]
properties-dialog: Print a warning for unknown nmm:flash values
Comment 2 Debarshi Ray 2014-12-16 12:58:03 UTC
Thanks for the nice backtrace. The crash is due to, what looks like, an invalid flash status. I pushed a patch to master that will print a diagnostic message before crashing.

Can you please try it and report what it prints before crashing? Maybe we should handle it more elegantly but I want to know what the string looks like before doing further changes.
Comment 3 Debarshi Ray 2015-10-30 10:46:15 UTC
Created attachment 314446 [details] [review]
properties-dialog: Be more forgiving of unknown nmm:flash values