properties-dialog: Print a warning for unknown nmm:flash values

This would tell us what to expect out there in the wild.

https://bugzilla.gnome.org/show_bug.cgi?id=734766